# Realtime-Stock-Data-Rust

./: Cargo.toml  README.md
src/: main.rs
src/interface/: mod.rs  parsing.rs  ui.rs
