[package]
name = "finnscr"
version = "0.1.0"
edition = "2021"

[dependencies]
crossterm = "0.27.0"
reqwest = { version = "0.11", features = ["blocking", "json"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0.120"
tokio = { version = "1.38.0", features = ["full"] }
tui = "0.19.0"
unicode-width = "0.1.13"
